# pipecat-agent-in-azure

./: README.md
app/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  utils.py
app/templates/: streams.xml
infrastructure/: application.tf  resources.tf
